# press.rs

./: .gitignore  Cargo.toml  LICENSE  README.MD
.github/workflows/: ci.yml  deploy_website.yml  release.yml  rust.yml
press_rs/: Cargo.toml
press_rs/benches/: benchmark.rs
press_rs/src/: lib.rs  main.rs  utils.rs
press_rs/src/compressor/: compress.rs  decompress.rs  mod.rs
press_rs/src/packager/: header.rs  mod.rs  pack.rs  unpack.rs
src/: lib.rs  main.rs  utils.rs
src/compressor/: compress.rs  decompress.rs  mod.rs
src/packager/: header.rs  mod.rs  pack.rs  unpack.rs
src/packeger/: header.rs  mod.rs  pack.rs  unpack.rs
website/: Cargo.toml  README.md  Trunk.toml  index.html  styles.css  tailwind.config.js
website/public/: 404.html
website/src/: app.rs  main.rs  utils.rs
website/src/components/: docs.rs  home.rs  mod.rs  nav.rs
website/src/components/app/: nav.rs
website/src/components/home/: file_drop_zone.rs  mod.rs  mode_toggle.rs
website/src/data/: docs.md
website/src/pages/: docs.rs  home.rs
