[package]
name = "press_rs"
description = "Tiny file compressor and packager on Rust."
version = "0.1.1"
edition = "2021"
license = "MIT"
homepage = "https://teseystd.github.io/press.rs/"
repository = "https://github.com/TeseySTD/press.rs"
readme = "../README.MD"
keywords = ["compression", "packaging", "lzw", "wasm"]
categories = ["compression", "wasm"]


[dev-dependencies]
rand = "0.9.2"
tempfile = "3.8"
