[package]
name = "website"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "File",
    "FileList",
    "FileReader",
    "HtmlAnchorElement",
    "Window",
    "Navigator",
    "Clipboard",
    "Document",
    "Element",
    "NodeList",
    "HtmlElement"
] }
gloo-file = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1.0", features = ["derive"] }
press_rs = { path = "../press_rs" }
pulldown-cmark = { version = "0.10", default-features = false, features = ["html"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
